--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.17.3",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-safe-action": "^5.0.0",
